Bringup saved logs
Signed-off-by: kiranpranay <kiranpranay12@gmail.com>

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -41,11 +41,12 @@
                     <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
                     <span>Run&nbsp;Wizard</span>
                 </a>
-                <a class="tile" href="/admin/logs" style="opacity:0.4;pointer-events:none">
-                    <!-- log icon -->
-                    <svg viewBox="0 0 24 24"><path d="M3 3h18v2H3V3m0 4h18v2H3V7m0 4h11v2H3v-2m0 4h18v2H3v-2z"/></svg>
-                    <span>Logs (soon)</span>
-                </a>
+<a class="tile" href="/logs">
+    <!-- log icon -->
+    <svg viewBox="0 0 24 24"><path d="M3 3h18v2H3V3m0 4h18v2H3V7m0 4h11v2H3v-2m0 4h18v2H3v-2z"/></svg>
+    <span>Logs</span>
+</a>
+
             </div>
         </section>
     </main>
