add exel export
Signed-off-by: kiranpranay <kiranpranay12@gmail.com>

--- a/templates/log_detail.html
+++ b/templates/log_detail.html
@@ -59,6 +59,9 @@
   </div>
 
   <a href="/logs" class="btn fab">← Back to Logs</a>
+  <a href="/logs/{{ sid }}/export" class="btn btn-secondary fab" style="right:160px"
+   title="Download as Excel">⬇︎ Excel</a>
+
 </section>
 </main>
 
